# handy-automator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  setup.py
api/: .redocly.lint-ignore.yaml  openapi.yml
api/paths/: auth_login.yml  auth_login_face.yml  auth_refresh.yml  device.yml  device_{id}.yml  ping.yml  user.yml  user_{id}.yml  workflow.yml  workflow_trigger.yml  workflow_{id}.yml  workflow_{id}_devices.yml  workflow_{id}_trigger.yml
db/: ER.mmd
db/migrations/: 20260205001755_create_schema.sql  20260220162649_create_relations.sql  20260221154500_make_fks_not_null.sql  20260221163407_user_password_hash.sql  20260228192444_unique_usernames.sql  20260311173829_device_details.sql  20260311210223_refresh_token.sql  (+6 more)
decision-maker/: .gitignore  banner.go  banner.txt  go.mod  go.sum  main.go  reflex.conf
edge-device/: edge_device.ino
mobile-app/: README.md  app.json  package-lock.json  package.json
processing-unit/: README.md  User.py  UserRegistery.py  api_interface.py  config.py  face_embeddings.py  face_recognition.py  gesture_recognition.py  main.py  pose.py  pyproject.toml  setting.json
python-processing/: api_interface.py  config.py  dev.py  face_embeddings.py  face_recognition.py  fr_unit_test.py  gesture_recognition.py  main.py  pose.py  pyproject.toml
python-processing/database/: ds_model_vggface_detector_retinaface_aligned_normalization_base_expand_0.pkl
python-processing/test_suite/: test_api_interface.py  test_config.py  test_face_recongnition.py
scripts/: check-db-connection.sh  help.py
(+63 files in other folders)
