[project]
name = "python-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cv2-enumerate-cameras>=1.3.3",
    "deepface>=0.0.98",
    "mediapipe>=0.10.32",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "tf-keras>=2.20.1",
]
